# backend/controllers/product.controller.js
@@ -1,7 +1,8 @@
 const ProductModel = require("../models/product.model");
 
-// create new post
-/**
+exports.createProduct = async (req, res) => {
+  // Create new product
+  /**
     #swagger.tags = ['Product']
     #swagger.summary = "Create a new product"
     #swagger.description = 'Endpoint to create a new product'
@@ -27,7 +28,6 @@ const ProductModel = require("../models/product.model");
        description: "Product created successfully"
     }
   */
-exports.createProduct = async (req, res) => {
   const { name, description, price, category } = req.body;
   if (!name || !description || !price || !category) {
     return res.status(400).json({ message: "Please provide all fields!" });
@@ -54,8 +54,17 @@ exports.createProduct = async (req, res) => {
   }
 };
 
-// get all products
 exports.getAllProducts = async (req, res) => {
+  // Get all product
+  /**
+    #swagger.tags = ['Product']
+    #swagger.summary = "Get all product"
+    #swagger.description = 'Endpoint to fetch all product data'
+    #swagger.response[200] = {
+       schema:{ "$ref": "#components/schemas/ProductResponse"},
+       description: "Fetching all products successfully"
+    }
+  */
   try {
     const products = await ProductModel.find();
     res.status(200).json(products);
@@ -67,8 +76,17 @@ exports.getAllProducts = async (req, res) => {
   }
 };
 
-// get product by id
 exports.getProductById = async (req, res) => {
+  // Get product by Id
+  /**
+    #swagger.tags = ['Product']
+    #swagger.summary = "Get product by Id"
+    #swagger.description = 'Endpoint to fetch a product data by using id'
+    #swagger.response[200] = {
+       schema:{ "$ref": "#components/schemas/ProductResponse"},
+       description: "Fetching product successfully"
+    }
+  */
   const { id } = req.params;
   try {
     const product = await ProductModel.findById(id);
@@ -84,8 +102,17 @@ exports.getProductById = async (req, res) => {
   }
 };
 
-// delete product by id
 exports.deleteProduct = async (req, res) => {
+  // Delete product by Id
+  /**
+    #swagger.tags = ['Product']
+    #swagger.summary = "Delete product by Id"
+    #swagger.description = 'Endpoint to delete a product data by using id'
+    #swagger.response[200] = {
+       schema:{ "$ref": "#components/schemas/ProductResponse"},
+       description: "Delete product successfully"
+    }
+  */
   const { id } = req.params;
   try {
     const product = await ProductModel.findById(id);
@@ -102,8 +129,34 @@ exports.deleteProduct = async (req, res) => {
   }
 };
 
-// update product by id
 exports.updateProduct = async (req, res) => {
+  // Update product data
+  /**
+    #swagger.tags = ['Product']
+    #swagger.summary = "Update product data"
+    #swagger.description = 'Endpoint to update product data'
+    #swagger.consumes = ['multipart/form-data']
+    #swagger.parameters['file'] = {
+       in:'formData',
+       type:'file',
+       required:true,
+       description:'Image to upload to Firebase Storage and get its url'
+    }
+    #swagger.requestBody = {
+       required:true,
+       content:{
+         "multipart/form-data":{
+           schema:{
+             $ref:"#components/schemas/NewProduct"
+           }
+         }
+       }
+    }
+    #swagger.response[200] = {
+       schema:{ "$ref": "#components/schemas/ProductResponse"},
+       description: "Update product data successfully"
+    }
+  */
   const { id } = req.params;
   try {
     const product = await ProductModel.findById(id);
